<resources>
    <string name="app_name">Carvices</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mechanic_services">Mechanic Services</string>
    <string name="towing_services">Towing Services</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="first_last_name"><![CDATA[First & Last Name]]></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate_us">Rate us.</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
</resources>
