<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Registeractivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.florent37.shapeofview.shapes.ArcView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:shape_arc_cropDirection="outside"
                app:shape_arc_height="50dp"
                app:shape_arc_position="bottom">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />
            </com.github.florent37.shapeofview.shapes.ArcView>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">


                <Button
                    android:id="@+id/button_selectPhoto"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/rounded_selectphoto"
                    android:text="Select Photo"
                    android:textColor="@color/White" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/selectPhoto_ImageView"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    app:civ_border_color="@color/Black"
                    app:civ_border_width="1dp"
                    android:elevation="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/edged_layout"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_linearlayout"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/ic_person_login" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/Grey" />

                        <EditText
                            android:id="@+id/editText_usernameRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/login_edittext"
                            android:hint="@string/first_last_name"
                            android:inputType="textEmailAddress"
                            android:textColorHint="#FFA082" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_linearlayout"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/ic_phone" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/Grey" />

                        <EditText
                            android:id="@+id/editText_phoneRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/login_edittext"
                            android:hint="Phone Number"
                            android:inputType="textPassword"
                            android:textColorHint="#FFA082" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_linearlayout"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/ic_email" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/Grey" />

                        <EditText
                            android:id="@+id/editText_emailRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/login_edittext"
                            android:hint="@string/email_address"
                            android:inputType="textPassword"
                            android:textColorHint="#FFA082" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_linearlayout"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            app:srcCompat="@drawable/ic_lock" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/Grey" />

                        <EditText
                            android:id="@+id/editText_passwordRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="@drawable/login_edittext"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColorHint="#FFA082" />

                    </LinearLayout>
                    

                    <Button
                        android:id="@+id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="50dp"
                        android:background="@drawable/login_button"
                        android:shadowColor="@color/colorPrimary"
                        android:text="@string/register"
                        android:textAllCaps="true"
                        android:layout_marginBottom="15dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textColor="@color/White" />

                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>